NetBSD Problem Report #40202

From www@NetBSD.org  Tue Dec 16 22:42:13 2008
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id A1A4F63BA47
	for <gnats-bugs@gnats.netbsd.org>; Tue, 16 Dec 2008 22:42:13 +0000 (UTC)
Message-Id: <20081216224213.08FF363BA1C@narn.NetBSD.org>
Date: Tue, 16 Dec 2008 22:42:13 +0000 (UTC)
From: ari.constancio@gmail.com
Reply-To: ari.constancio@gmail.com
To: gnats-bugs@NetBSD.org
Subject: Wrong spelling of 'portuguese' on sysinstall
X-Send-Pr-Version: www-1.0

>Number:         40202
>Category:       misc
>Synopsis:       Wrong spelling of 'portuguese' on sysinstall
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    misc-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Dec 16 22:45:00 +0000 2008
>Closed-Date:    Wed Feb 18 04:19:50 +0000 2009
>Last-Modified:  Wed Mar 21 21:30:18 +0000 2012
>Originator:     Ari Constancio
>Release:        5.99.5
>Organization:
>Environment:
NetBSD C26 5.99.5 NetBSD 5.99.5 (GENERIC) #1: Tue Dec 16 18:55:14 WET 2008 root@C26:/usr/obj/sys/arch/i386/compile/GENERIC i386
>Description:
When choosing the keyboard type on sysinst, the spelling of 'portuguese' is wrong ('portugese' is seen).
>How-To-Repeat:
Run sysinst and check keyboard type
>Fix:
Apply the following patch:

Index: wsemul_vt100.c
===================================================================
RCS file: /cvsroot/src/sys/dev/wscons/wsemul_vt100.c,v
retrieving revision 1.30
diff -u -r1.30 wsemul_vt100.c
--- wsemul_vt100.c	16 Nov 2006 01:33:31 -0000	1.30
+++ wsemul_vt100.c	16 Dec 2008 22:30:29 -0000
@@ -662,7 +662,7 @@
 	int nrc;

 	switch (c) {
-	case '%': /* probably portugese */
+	case '%': /* probably portuguese */
 		newstate = VT100_EMUL_STATE_SCS96_PERCENT;
 		break;
 	case 'A': /* ISO-latin-1 supplemental */
@@ -713,7 +713,7 @@
 wsemul_vt100_output_scs96_percent(struct wsemul_vt100_emuldata *edp, u_char c)
 {
 	switch (c) {
-	case '6': /* portugese */
+	case '6': /* portuguese */
 		vt100_setnrc(edp, 8);
 		break;
 	default:
Index: wsksymdef.h
===================================================================
RCS file: /cvsroot/src/sys/dev/wscons/wsksymdef.h,v
retrieving revision 1.61
diff -u -r1.61 wsksymdef.h
--- wsksymdef.h	21 May 2008 07:39:24 -0000	1.61
+++ wsksymdef.h	16 Dec 2008 22:30:29 -0000
@@ -590,7 +590,7 @@
 action(KB_JP,	0,	0x0800,	"jp",	,	"Japanese")	\
 action(KB_NO,	0,	0x0a00,	"no",	,	"Norwegian")	\
 action(KB_PL,	0,	0x0d00,	"pl",	,	"Polish")	\
-action(KB_PT,	0,	0x1100,	"pt",	,	"Portugese")	\
+action(KB_PT,	0,	0x1100,	"pt",	,	"Portuguese")	\
 action(KB_RU,	0,	0x0e00,	"ru",	,	"Russian")	\
 action(KB_ES,	0,	0x0b00,	"es",	,	"Spanish")	\
 action(KB_SV,	0,	0x0900,	"sv",	,	"Swedish")	\

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: snj@NetBSD.org
State-Changed-When: Wed, 18 Feb 2009 04:19:50 +0000
State-Changed-Why:
Corrected.  Thanks!


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40202 CVS commit: src/sys/dev/wscons
Date: Wed, 18 Feb 2009 04:17:44 +0000 (UTC)

 Module Name:	src
 Committed By:	snj
 Date:		Wed Feb 18 04:17:44 UTC 2009

 Modified Files:
 	src/sys/dev/wscons: wsemul_vt100.c wsemul_vt100_chars.c wsksymdef.h

 Log Message:
 s/portugese/portuguese/, spotted by Ari Constancio in PR misc/40202.


 To generate a diff of this commit:
 cvs rdiff -r1.30 -r1.31 src/sys/dev/wscons/wsemul_vt100.c
 cvs rdiff -r1.11 -r1.12 src/sys/dev/wscons/wsemul_vt100_chars.c
 cvs rdiff -r1.61 -r1.62 src/sys/dev/wscons/wsksymdef.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Julian Coleman" <jdc@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40202 CVS commit: [netbsd-5] src/sys/dev/wscons
Date: Wed, 21 Mar 2012 21:27:37 +0000

 Module Name:	src
 Committed By:	jdc
 Date:		Wed Mar 21 21:27:37 UTC 2012

 Modified Files:
 	src/sys/dev/wscons [netbsd-5]: wsemul_vt100.c wsemul_vt100_chars.c
 	    wsksymdef.h

 Log Message:
 Pull up revisions (requested by bouyer in ticket #1727):
   src/sys/dev/wscons/wsemul_vt100.c         1.31
   src/sys/dev/wscons/wsemul_vt100_chars.c   1.12
   src/sys/dev/wscons/wsksymdef.h            1.62

 s/portugese/portuguese/, spotted by Ari Constancio in PR misc/40202.


 To generate a diff of this commit:
 cvs rdiff -u -r1.30 -r1.30.64.1 src/sys/dev/wscons/wsemul_vt100.c
 cvs rdiff -u -r1.11 -r1.11.86.1 src/sys/dev/wscons/wsemul_vt100_chars.c
 cvs rdiff -u -r1.61.8.1 -r1.61.8.2 src/sys/dev/wscons/wsksymdef.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Julian Coleman" <jdc@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40202 CVS commit: [netbsd-5-0] src/sys/dev/wscons
Date: Wed, 21 Mar 2012 21:27:43 +0000

 Module Name:	src
 Committed By:	jdc
 Date:		Wed Mar 21 21:27:42 UTC 2012

 Modified Files:
 	src/sys/dev/wscons [netbsd-5-0]: wsemul_vt100.c wsemul_vt100_chars.c
 	    wsksymdef.h

 Log Message:
 Pull up revisions (requested by bouyer in ticket #1727):
   src/sys/dev/wscons/wsemul_vt100.c         1.31
   src/sys/dev/wscons/wsemul_vt100_chars.c   1.12
   src/sys/dev/wscons/wsksymdef.h            1.62

 s/portugese/portuguese/, spotted by Ari Constancio in PR misc/40202.


 To generate a diff of this commit:
 cvs rdiff -u -r1.30 -r1.30.70.1 src/sys/dev/wscons/wsemul_vt100.c
 cvs rdiff -u -r1.11 -r1.11.92.1 src/sys/dev/wscons/wsemul_vt100_chars.c
 cvs rdiff -u -r1.61 -r1.61.14.1 src/sys/dev/wscons/wsksymdef.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Julian Coleman" <jdc@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40202 CVS commit: [netbsd-5-1] src/sys/dev/wscons
Date: Wed, 21 Mar 2012 21:27:47 +0000

 Module Name:	src
 Committed By:	jdc
 Date:		Wed Mar 21 21:27:47 UTC 2012

 Modified Files:
 	src/sys/dev/wscons [netbsd-5-1]: wsemul_vt100.c wsemul_vt100_chars.c
 	    wsksymdef.h

 Log Message:
 Pull up revisions (requested by bouyer in ticket #1727):
   src/sys/dev/wscons/wsemul_vt100.c         1.31
   src/sys/dev/wscons/wsemul_vt100_chars.c   1.12
   src/sys/dev/wscons/wsksymdef.h            1.62

 s/portugese/portuguese/, spotted by Ari Constancio in PR misc/40202.


 To generate a diff of this commit:
 cvs rdiff -u -r1.30 -r1.30.74.1 src/sys/dev/wscons/wsemul_vt100.c
 cvs rdiff -u -r1.11 -r1.11.96.1 src/sys/dev/wscons/wsemul_vt100_chars.c
 cvs rdiff -u -r1.61.8.1 -r1.61.8.1.2.1 src/sys/dev/wscons/wsksymdef.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.