Pull up revisions (requested by bouyer in ticket #1727):   src/sys/dev/wscons/wsemul_vt100.c         1.31   src/sys/dev/wscons/wsemul_vt100_chars.c   1.12   src/sys/dev/wscons/wsksymdef.h            1.62

s/portugese/portuguese/, spotted by Ari Constancio in PR misc/40202.